--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
        
        	<script> 
          
-        require(['$api/toplists#Toplist','$api/models'], function(Toplist,models) {
+        require(['$api/toplists#Toplist','$api/models', '$api/models#Artist'], function(Toplist, models, Artist) {
 
             var toplist = Toplist.forCurrentUser();
 
@@ -30,9 +30,12 @@
 
                 var promises = [];
 
+		// Hardcode Dunderpatrullen -.-
+		promises.push(Artist.fromURI('spotify:artist:1vhiRTDEXaBLR0J8O5YJQ8').load('uri', 'name', 'image'));
+
                 for (var i = 0, l = artists.length; i < l; i++) {
                     var artist = artists.get(i);
-                    promises.push(artist.load('uri', 'name','image'));
+                    promises.push(artist.load('uri', 'name', 'image'));
                 }
 
                 models.Promise.join(promises).done(function(artistsPromises) {
@@ -56,7 +59,7 @@
                         link.appendChild(image);
                         link.appendChild(a);
 
-                        $( link ).append("<a href='#inline_content' class='donate' data-artist_id='" + ap.uri + "'>Donate!</a>");
+                        $( link ).append("<a href='#inline_content' class='donate_artist' data-artist_id='" + ap.uri + "'>Donate!</a>");
 
                         artistsFragment.appendChild(link);
 
@@ -64,12 +67,7 @@
 
                     $('#toplist-artists').append(artistsFragment);
 
-        	    $(".donate").colorbox({ inline: true, width: "70%", closeButton: false, opacity: 0.8 });
-/*
-		    $(".donate").click(function() {
-			    alert($(this).data('artist_id'));
-		    });
-*/
+        	    $(".donate_artist").colorbox({ inline: true, width: "70%", closeButton: false, opacity: 0.8 });
 
                 });
             });
