--- a/index.html
+++ b/index.html
@@ -13,10 +13,14 @@
     <body>
 	<div id="wrapper">
 		<div id="index" class="section">
-			<a href="spotify:app:donefy2000:user:toplist">aa</a>
+
+<input type="text" value="Search!" id="searchfield">
+            
 		</div>
+    <span id ="search"><img src="img/menu.png"></span>
 	</div>
-	<a href="#inline_content" id="col">colortst</a>
+          <h1>Donefy - donate crypto currencies to your favourite artists! </h1>
+	<!-- <a href="#inline_content" id="col">colortst</a> -->
 	<div id="toplist-artists"></div>
        
        	<script> 
