--- a/index.html
+++ b/index.html
@@ -51,7 +51,10 @@
 		var BACKEND_URI = "http://193.13.100.197:5556/";
 
 		var ARTIST_ACCOUNTS = {
-			'spotify:artist:1PXHzxRDiLnjqNrRn2Xbsa': 'mu8KfJLHQo1a3HLEfYdVxnF8WsR2KxBr6k'
+			// Underworld
+			'spotify:artist:1PXHzxRDiLnjqNrRn2Xbsa': 'mu8KfJLHQo1a3HLEfYdVxnF8WsR2KxBr6k',
+			// Dunderpatrullen
+			'spotify:artist:1vhiRTDEXaBLR0J8O5YJQ8': 'derp'
 		};
 		
 
