--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 			<h2>Donate to <span id="donate_artist_name"></span>!</h2>
 			<input type="text" class="donatebox" id="donatebox">
 			<span id="currency">BTC</span>
-			<button id="donate">Donate !</button>
+			<button class=button id="donate">Donate !</button>
 		</div>
 	</div>
 
