--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 			// Underworld
 			'spotify:artist:1PXHzxRDiLnjqNrRn2Xbsa': 'mu8KfJLHQo1a3HLEfYdVxnF8WsR2KxBr6k',
 			// Dunderpatrullen
-			'spotify:artist:1vhiRTDEXaBLR0J8O5YJQ8': 'derp'
+			'spotify:artist:1vhiRTDEXaBLR0J8O5YJQ8': 'mpMFKeXdMJh7rgccJnmoJUEYYxhTQNnAXg'
 		};
 		
 
